implemented title translate service

--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -1,11 +1,15 @@
 {
-  "main": {
-    "title": "WebKey"
+  "header": {
+    "home": "Home",
+    "about": "About",
+    "projects": "Projects",
+    "more": "More"
   },
 
   "title": {
     "home": "Home Page",
     "about": "About Us",
-    "projects": "Projects"
+    "projects": "Projects",
+    "more": "More"
   }
 }
