--- a/public/i18n/ge.json
+++ b/public/i18n/ge.json
@@ -6,10 +6,8 @@
     "more": "მეტი"
   },
 
-  "title": {
-    "home": "მთავარი",
-    "about": "ჩვენს შესახებ",
-    "projects": "პროექტები",
-    "more": "მეტი"
+  "home": {
+    "hi": "გამარჯობა, ჩვენ ვართ",
+    "wk": "ვებკეი"
   }
 }
